[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Griffon"
version = "3.0"
description = "Griffon Series: Towards A FIne-Grained General LMM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1", "torchvision==0.18.1",
    "transformers>=4.45.0.dev0", "tokenizers", "sentencepiece==0.1.99", "shortuuid",
    "accelerate", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio>=3.35.2", "gradio_client>=0.2.9",
    "requests", "httpx>=0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "flash-attn==2.5.8"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]

[project.urls]
"Bug Tracker" = "https://github.com/jefferyZhan/Griffon/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "eval_outputs*", "tools*", "demo*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "eval_outputs*", "tools*", "demo*"]